--- a/assets/stylesheets/layout.css
+++ b/assets/stylesheets/layout.css
@@ -2,10 +2,14 @@ html, body {
   margin: 0;
 }
 
+html {
+  font-size: 16px;
+}
+
 .l-container {
   margin: 0 auto;
   width: 640px;
-  padding: 80px 0 30px;
-  min-height: calc(100vh - 72px);
+  padding: 5rem 0 2rem;
+  min-height: calc(100vh - 76px);
   box-sizing: border-box;
 }
