--- a/assets/stylesheets/layout.css
+++ b/assets/stylesheets/layout.css
@@ -13,3 +13,15 @@ html {
   min-height: calc(100vh - 76px);
   box-sizing: border-box;
 }
+
+@media(max-width: 640px) {
+  html {
+    font-size: 12px;
+  }
+
+  .l-container {
+    width: 100%;
+    padding: 5rem 1.5rem 2rem;
+    min-height: calc(100vh - 57px);
+  }
+}
